src/objects/User_Course_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>User Course Profiles</relationshipLabel>
        <relationshipName>User_Course_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Course_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Course Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Course Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Course Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>